fixed the distorted line on ipad

--- a/src/main/webapp/resources/css/registerStyle.css
+++ b/src/main/webapp/resources/css/registerStyle.css
@@ -91,7 +91,7 @@ section{
 }
 
 /*Media Queries*/
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 767px){
     .bg-image{
         height: unset;
         min-height: 100%;
